lot of progress in prompts + parsing. few refactors to better names as well. added a lot of fields to codeGenerator

--- a/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/index.html
+++ b/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/index.html
@@ -9,11 +9,13 @@
 <h1>Welcome to the Form</h1>
 
 <form action="/MyServlet" method="POST">
-    <label for="userprompt">First name:</label><br>
-    <input type="text" id="userprompt" name="userprompt" value="John"><br>
+    <label for="userprompt">Prompt:</label><br>
+    <input type="text" id="userprompt" name="userprompt" value="Prompt"><br>
 
-    <label for="lname">Last name:</label><br>
-    <input type="text" id="lname" name="lname" value="Doe"><br><br>
+    <label for="parameters">parameters:</label><br>
+    <input type="text" id="parameters" name="parameters" value="parameters"><br><br>
+    <label for="output">output:</label><br>
+    <input type="text" id="output" name="output" value="output"><br>
 
     <input type="submit" value="Submit">
 </form>
