user can modify the code and check it with bandit now

--- a/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/index.html
+++ b/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/index.html
@@ -19,6 +19,12 @@
 
     <input type="submit" value="Submit">
 </form>
+<!--<h2>or enter your own code to be tested:</h2>-->
+<!--<form action="/userIDE" method="POST">-->
+<!--    <label for="usercode">code:</label><br>-->
+<!--    <textarea id="usercode" name="usercode" rows="20" cols="80"></textarea><br>-->
+<!--    <input type="submit" value="Check">-->
+<!--</form>-->
 
 </body>
 </html>
