--- a/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/ide.html
+++ b/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/ide.html
@@ -14,38 +14,32 @@
 <pre id="output"></pre>
 
 <script>
-    let socket = new WebSocket("ws://localhost:8082/socket");
-    let sessionId = null;
+    const socket = new WebSocket('ws://localhost:8083/socket');  // Ensure it matches Spring Boot
 
-    // When WebSocket opens
-    socket.onopen = () => {
-        console.log("WebSocket opened");
+    socket.onopen = function(event) {
+        console.log('WebSocket is open now.');
     };
 
-    // When a message (output) is received from the WebSocket server
-    socket.onmessage = (event) => {
+    socket.onmessage = function(event) {
+        console.log('WebSocket message received:', event.data);
         let message = JSON.parse(event.data);
-
         if (message.type === "session_id") {
             sessionId = message.data;
+            console.log("Session ID received:", sessionId);
         } else if (message.type === "result") {
             document.getElementById("output").innerText = message.data;
         }
     };
 
-    // Submit Python code to WebSocket server
-    function submitCode() {
-        let code = document.getElementById("code").value;
+    socket.onerror = function(event) {
+        console.error('WebSocket error observed:', event);
+    };
 
-        // Send the code to the server via WebSocket
-        if (sessionId) {
-            let message = {
-                type: "code",
-                data: code
-            };
-            socket.send(JSON.stringify(message));
-        }
-    }
+    socket.onclose = function(event) {
+        console.log('WebSocket is closed now. Code:', event.code, 'Reason:', event.reason);
+    };
+
+
 </script>
 </body>
 </html>
