unit tests and formatting

--- a/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/index.html
+++ b/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/index.html
@@ -22,8 +22,8 @@
         }
 
         form {
-            display: flex; /* Ensure the form itself uses flexbox */
-            gap: 20px; /* Space between the two boxes */
+            display: flex;
+            gap: 20px;
         }
 
         .left-box, .right-box {
@@ -32,7 +32,7 @@
             border-radius: 10px;
             display: flex;
             flex-direction: column;
-            width: 350px; /* Fixed width for both boxes */
+            width: 350px;
             margin-top: 100px;
         }
 
@@ -41,7 +41,7 @@
             border: none;
             border-radius: 8px;
             padding: 10px;
-            width: 100%; /* Full width of the box */
+            width: 100%;
             font-size: 16px;
             outline: none;
             margin-bottom: 10px;
@@ -54,7 +54,7 @@
         }
 
         #userprompt {
-            height: 100px; /* Height for the prompt input */
+            height: 100px;
         }
 
         input[type="submit"] {
@@ -64,8 +64,8 @@
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
-            align-self: flex-start; /* Align submit button to the start of the form */
-            margin-top: 20px; /* Space above the submit button */
+            align-self: flex-start;
+            margin-top: 20px;
         }
     </style>
 
@@ -103,20 +103,20 @@
 <body>
 
 <div class="container">
-<!--    <form action="/MyServlet" method="POST">-->
-<!--        <div class="left-box">-->
-<!--            <label for="userprompt">Prompt:</label>-->
-<!--            <textarea type="text" id="userprompt" name="userprompt" value="Prompt"></textarea>-->
-<!--            <input type="submit" value="Submit"> &lt;!&ndash; Submit button within the form &ndash;&gt;-->
-<!--        </div>-->
-<!--        <div class="right-box">-->
-<!--            <label for="parameters">Parameters:</label>-->
-<!--            <input type="text" id="parameters" name="parameters" value="parameters">-->
+    <!--    <form action="/MyServlet" method="POST">-->
+    <!--        <div class="left-box">-->
+    <!--            <label for="userprompt">Prompt:</label>-->
+    <!--            <textarea type="text" id="userprompt" name="userprompt" value="Prompt"></textarea>-->
+    <!--            <input type="submit" value="Submit"> &lt;!&ndash; Submit button within the form &ndash;&gt;-->
+    <!--        </div>-->
+    <!--        <div class="right-box">-->
+    <!--            <label for="parameters">Parameters:</label>-->
+    <!--            <input type="text" id="parameters" name="parameters" value="parameters">-->
 
-<!--            <label for="output">Output:</label>-->
-<!--            <input type="text" id="output" name="output" value="output">-->
-<!--        </div>-->
-<!--    </form>-->
+    <!--            <label for="output">Output:</label>-->
+    <!--            <input type="text" id="output" name="output" value="output">-->
+    <!--        </div>-->
+    <!--    </form>-->
 
     <form action="/MyServlet" method="POST">
         <div class="left-box">
@@ -173,7 +173,6 @@
 <!--            });-->
 <!--    });-->
 <!--</script>-->
-
 
 
 <!--<h2>or enter your own code to be tested:</h2>-->
