--- a/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/ide.html
+++ b/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/ide.html
@@ -24,6 +24,12 @@
             conversation.scrollTop = conversation.scrollHeight;
         };
 
+        function adjustTextareaHeight() {
+            const textarea = document.getElementById('usercode');
+            textarea.style.height = 'auto';
+            textarea.style.height = textarea.scrollHeight + 'px';
+        }
+
         function runCode() {
             document.getElementById('conversation-container').style.display = 'block';
             const userCode = document.getElementById('usercode').value;
@@ -58,7 +64,9 @@
             const urlParams = new URLSearchParams(window.location.search);
             const userCode = urlParams.get('userCode');
             if (userCode) {
-                document.getElementById('usercode').value = decodeURIComponent(userCode);
+                const textarea = document.getElementById('usercode');
+                textarea.value = decodeURIComponent(userCode);
+                adjustTextareaHeight();
             }
         };
 
@@ -75,7 +83,7 @@
 <body>
 <h1>Code Editor</h1>
 <p>name = input("input") <br> print(name)</p>
-<textarea id="usercode" placeholder="Enter your Python code here..." rows="5" cols="80"
+<textarea id="usercode" placeholder="Enter your Python code here..." oninput="adjustTextareaHeight()"
           spellcheck="false"></textarea><br>
 <button id="runButton" onclick="runCode()">Run Code</button>
 <button id="runBandit" onclick="runBandit()">Run Bandit</button>
