--- a/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/ide.html
+++ b/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/ide.html
@@ -3,10 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Local Host</title>
+    <title>Python Code Editor</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+        /* Additional styles specific to this page */
+        #conversation-container {
+            display: none;
+            margin-top: 30px;
+            background-color: #fff;
+            border-radius: 8px;
+            padding: 20px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        #conversation {
+            height: 300px;
+            overflow-y: auto;
+            border: 1px solid #ddd;
+            padding: 15px;
+            border-radius: 6px;
+            background-color: #f8f9fa;
+            margin-bottom: 20px;
+        }
+
+        .user-message {
+            background-color: #e1f5fe;
+            padding: 8px 12px;
+            border-radius: 15px 15px 15px 0;
+            margin-bottom: 10px;
+            max-width: 80%;
+            word-wrap: break-word;
+        }
+
+        .server-message {
+            background-color: #e8f5e9;
+            padding: 8px 12px;
+            border-radius: 15px 15px 0 15px;
+            margin-bottom: 10px;
+            max-width: 80%;
+            word-wrap: break-word;
+            /* Removed margin-left: auto; to align from the left */
+        }
+
+        #usercode {
+            width: 100%;
+            min-height: 200px;
+            font-family: 'Consolas', 'Monaco', 'Courier New', monospace;
+            background-color: #272822;
+            color: #f8f8f2;
+            border: none;
+            border-radius: 6px;
+            padding: 15px;
+            line-height: 1.5;
+            resize: vertical;
+            margin-bottom: 15px;
+            outline: none;
+        }
+
+        #userinput {
+            width: 100%;
+            padding: 12px;
+            border: 1px solid #ddd;
+            border-radius: 6px;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            resize: vertical;
+            margin-bottom: 15px;
+        }
+
+        .example-code {
+            background-color: #f1f8ff;
+            border-left: 4px solid #2196f3;
+            padding: 12px 15px;
+            margin-bottom: 20px;
+            border-radius: 0 4px 4px 0;
+            font-family: 'Consolas', 'Monaco', 'Courier New', monospace;
+        }
+
+        .button-group {
+            margin-bottom: 30px;
+        }
+
+        /* Visual differentiation between user and server messages */
+        .message-label {
+            font-weight: bold;
+            margin-bottom: 3px;
+            font-size: 0.85em;
+            color: #555;
+        }
+
+        .message-content {
+            margin: 0;
+        }
+    </style>
     <script>
         const socket = new WebSocket('ws://localhost:8083/ws');
 
@@ -19,7 +109,19 @@
             const conversation = document.getElementById('conversation');
             const messageElement = document.createElement('div');
             messageElement.classList.add('server-message');
-            messageElement.textContent = 'Server: ' + result;
+
+            // Create inner structure for better formatting
+            const labelDiv = document.createElement('div');
+            labelDiv.classList.add('message-label');
+            labelDiv.textContent = 'Server:';
+
+            const contentDiv = document.createElement('div');
+            contentDiv.classList.add('message-content');
+            contentDiv.textContent = result;
+
+            messageElement.appendChild(labelDiv);
+            messageElement.appendChild(contentDiv);
+
             conversation.appendChild(messageElement);
             conversation.scrollTop = conversation.scrollHeight;
         };
@@ -28,6 +130,7 @@
             const textarea = document.getElementById('usercode');
             textarea.style.height = 'auto';
             textarea.style.height = textarea.scrollHeight + 'px';
+            updateLineNumbers();
         }
 
         function runCode() {
@@ -36,7 +139,19 @@
             const conversation = document.getElementById('conversation');
             const messageElement = document.createElement('div');
             messageElement.classList.add('user-message');
-            messageElement.textContent = 'User (code): ' + userCode;
+
+            // Create inner structure for better formatting
+            const labelDiv = document.createElement('div');
+            labelDiv.classList.add('message-label');
+            labelDiv.textContent = 'User (code):';
+
+            const contentDiv = document.createElement('div');
+            contentDiv.classList.add('message-content');
+            contentDiv.textContent = userCode;
+
+            messageElement.appendChild(labelDiv);
+            messageElement.appendChild(contentDiv);
+
             conversation.appendChild(messageElement);
             conversation.scrollTop = conversation.scrollHeight;
             socket.send(JSON.stringify({type: 'runCode', code: userCode}));
@@ -44,10 +159,24 @@
 
         function sendInput() {
             const userInput = document.getElementById('userinput').value;
+            if (!userInput.trim()) return; // Don't send empty input
+
             const conversation = document.getElementById('conversation');
             const messageElement = document.createElement('div');
             messageElement.classList.add('user-message');
-            messageElement.textContent = 'User (input): ' + userInput;
+
+            // Create inner structure for better formatting
+            const labelDiv = document.createElement('div');
+            labelDiv.classList.add('message-label');
+            labelDiv.textContent = 'User (input):';
+
+            const contentDiv = document.createElement('div');
+            contentDiv.classList.add('message-content');
+            contentDiv.textContent = userInput;
+
+            messageElement.appendChild(labelDiv);
+            messageElement.appendChild(contentDiv);
+
             conversation.appendChild(messageElement);
             conversation.scrollTop = conversation.scrollHeight;
             socket.send(JSON.stringify({type: 'userInput', input: userInput}));
@@ -78,22 +207,61 @@
             link.download = 'usercode.py';
             link.click();
         }
+
+        function updateLineNumbers() {
+            const textarea = document.getElementById('usercode');
+            const lineNumbers = document.getElementById('lineNumbers');
+
+            const lines = textarea.value.split('\n').length;
+            let lineHTML = '';
+            for (let i = 1; i <= lines; i++) {
+                lineHTML += `<span>${i}</span>`;
+            }
+            lineNumbers.innerHTML = lineHTML;
+
+
+            lineNumbers.scrollTop = textarea.scrollTop;
+        }
+
+        document.getElementById('usercode').addEventListener('scroll', function () {
+            document.getElementById('lineNumbers').scrollTop = this.scrollTop;
+        });
+
+        document.getElementById('usercode').addEventListener('input', updateLineNumbers);
+
+        updateLineNumbers();
+
     </script>
 </head>
 <body>
-<h1>Code Editor</h1>
-<p>name = input("input") <br> print(name)</p>
-<textarea id="usercode" placeholder="Enter your Python code here..." oninput="adjustTextareaHeight()"
-          spellcheck="false"></textarea><br>
-<button id="runButton" onclick="runCode()">Run Code</button>
-<button id="runBandit" onclick="runBandit()">Run Bandit</button>
-<button id="downloadButton" onclick="downloadFile()">Download Code</button>
-<div id="conversation-container">
-    <h2>Conversation</h2>
-    <div id="conversation"></div>
-    <h2>User Input</h2>
-    <textarea id="userinput" placeholder="Enter input to interact with the code..." rows="3" cols="80"></textarea><br>
-    <button id="sendInputButton" onclick="sendInput()">Send Input</button>
+<div class="container">
+    <h1>Python Code Editor</h1>
+
+    <div class="example-code">
+        <p>Example: <br>name = input("Enter your name: ") <br>print("Hello, " + name + "!")</p>
+    </div>
+
+    <div class="editor-container">
+        <pre class="line-numbers" id="lineNumbers"></pre>
+        <textarea id="usercode" placeholder="Enter your Python code here..." oninput="adjustTextareaHeight()"
+                  spellcheck="false"></textarea>
+
+    </div>
+
+    <div class="button-group">
+        <button id="runButton" onclick="runCode()">Run Code</button>
+        <button id="runBandit" onclick="runBandit()">Run Bandit</button>
+        <button id="downloadButton" onclick="downloadFile()">Download Code</button>
+    </div>
+
+    <div id="conversation-container">
+        <h2>Execution Output</h2>
+        <div id="conversation"></div>
+
+        <h2>User Input</h2>
+        <textarea id="userinput" placeholder="Enter input to interact with the code..." rows="3"></textarea>
+        <button id="sendInputButton" onclick="sendInput()">Send Input</button>
+    </div>
 </div>
 </body>
 </html>
