bit of frontend + removing old commented out code

--- a/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/index.html
+++ b/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/index.html
@@ -119,13 +119,16 @@
     <!--    </form>-->
 
     <form action="/MyServlet" method="POST">
+
         <div class="left-box">
+            <h1>Generate code</h1>
             <label for="userprompt">Prompt:</label>
             <textarea id="userprompt" name="userprompt"></textarea>
             <input type="submit" value="Submit">
         </div>
 
         <div class="right-box">
+            <h1>Define unit test (optional)</h1>
             <label>Parameters:</label>
             <div id="parameters-container">
                 <div class="parameter">
