--- a/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/index.html
+++ b/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/index.html
@@ -6,68 +6,9 @@
     <title>Local Host</title>
     <link rel="stylesheet"
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <style>
-        body {
-            background-color: #f5f5f5;
-            font-family: Arial, sans-serif;
-        }
 
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: flex-start;
-            height: 100vh;
-            gap: 20px;
-        }
-
-        form {
-            display: flex;
-            gap: 20px;
-        }
-
-        .left-box, .right-box {
-            background-color: #b0b0b0;
-            padding: 20px;
-            border-radius: 10px;
-            display: flex;
-            flex-direction: column;
-            width: 350px;
-            margin-top: 100px;
-        }
-
-        input[type="text"] {
-            background-color: #e0e0e0;
-            border: none;
-            border-radius: 8px;
-            padding: 10px;
-            width: 100%;
-            font-size: 16px;
-            outline: none;
-            margin-bottom: 10px;
-        }
-
-        label {
-            font-size: 14px;
-            font-weight: bold;
-            color: #666;
-        }
-
-        #userprompt {
-            height: 100px;
-        }
-
-        input[type="submit"] {
-            background-color: #fff;
-            border: 1px solid #000;
-            border-radius: 5px;
-            padding: 10px 20px;
-            font-size: 16px;
-            cursor: pointer;
-            align-self: flex-start;
-            margin-top: 20px;
-        }
-    </style>
 
     <script>
         function addParameter() {
@@ -97,6 +38,20 @@
         function removeElement(button) {
             button.parentElement.remove();
         }
+
+        function toggleRightBox() {
+            const rightBox = document.getElementById('rightBox');
+            const button = document.getElementById('addUnitTestBtn');
+            if (rightBox.style.display === 'none') {
+                rightBox.style.display = 'block';
+                button.textContent = "Remove Unit Test";
+            } else {
+                rightBox.style.display = 'none';
+                button.textContent = "Add Unit Test";
+            }
+        }
+
+
     </script>
 
 </head>
@@ -125,9 +80,10 @@
             <label for="userprompt">Prompt:</label>
             <textarea id="userprompt" name="userprompt"></textarea>
             <input type="submit" value="Submit">
+            <button type="button" id="addUnitTestBtn" onclick="toggleRightBox()">Add Unit Test</button>
         </div>
 
-        <div class="right-box">
+        <div class="right-box" id="rightBox" style="display: none;">
             <h1>Define unit test (optional)</h1>
             <label>Parameters:</label>
             <div id="parameters-container">
