--- a/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/ide.html
+++ b/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/ide.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <style>
-        /* Additional styles specific to this page */
         #conversation-container {
             display: none;
             margin-top: 30px;
@@ -44,7 +43,6 @@
             margin-bottom: 10px;
             max-width: 80%;
             word-wrap: break-word;
-            /* Removed margin-left: auto; to align from the left */
         }
 
         #usercode {
@@ -85,7 +83,6 @@
             margin-bottom: 30px;
         }
 
-        /* Visual differentiation between user and server messages */
         .message-label {
             font-weight: bold;
             margin-bottom: 3px;
@@ -110,7 +107,6 @@
             const messageElement = document.createElement('div');
             messageElement.classList.add('server-message');
 
-            // Create inner structure for better formatting
             const labelDiv = document.createElement('div');
             labelDiv.classList.add('message-label');
             labelDiv.textContent = 'Server:';
@@ -140,7 +136,6 @@
             const messageElement = document.createElement('div');
             messageElement.classList.add('user-message');
 
-            // Create inner structure for better formatting
             const labelDiv = document.createElement('div');
             labelDiv.classList.add('message-label');
             labelDiv.textContent = 'User (code):';
@@ -159,13 +154,13 @@
 
         function sendInput() {
             const userInput = document.getElementById('userinput').value;
-            if (!userInput.trim()) return; // Don't send empty input
+            if (!userInput.trim()) return;
 
             const conversation = document.getElementById('conversation');
             const messageElement = document.createElement('div');
             messageElement.classList.add('user-message');
 
-            // Create inner structure for better formatting
+
             const labelDiv = document.createElement('div');
             labelDiv.classList.add('message-label');
             labelDiv.textContent = 'User (input):';
