--- a/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/index.html
+++ b/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/index.html
@@ -79,7 +79,10 @@
             <h1>Generate code</h1>
             <label for="userprompt">Prompt:</label>
             <textarea id="userprompt" name="userprompt"></textarea>
-            <input type="submit" value="Submit">
+            <div class="d-flex justify-content-center my-3">
+                <input type="submit" value="Submit" class="btn btn-outline-primary">
+            </div>
+
             <button type="button" id="addUnitTestBtn" onclick="toggleRightBox()">Add Unit Test</button>
         </div>
 
