--- a/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/ide.html
+++ b/PythonIDE_Testing/PythonIDE_Testing/src/main/resources/static/ide.html
@@ -230,7 +230,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Python Code Editor</h1>
+    <h1>Code Editor</h1>
 
     <div class="example-code">
         <p>Example: <br>name = input("Enter your name: ") <br>print("Hello, " + name + "!")</p>
@@ -250,7 +250,7 @@
     </div>
 
     <div id="conversation-container">
-        <h2>Execution Output</h2>
+        <h2>Output</h2>
         <div id="conversation"></div>
 
         <h2>User Input</h2>
